// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.accesslist.v1;

import "google/protobuf/empty.proto";
import "teleport/accesslist/v1/accesslist.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/accesslist/v1;accesslistv1";

// AccessLisetService provides CRUD methods for Access List resources.
service AccessListService {
  // GetAccessLists returns a list of all access lists.
  rpc GetAccessLists(GetAccessListsRequest) returns (GetAccessListsResponse);
  // ListAccessLists returns a paginated list of all access lists.
  rpc ListAccessLists(ListAccessListsRequest) returns (ListAccessListsResponse);
  // GetAccessList returns the specified access list resource.
  rpc GetAccessList(GetAccessListRequest) returns (AccessList);
  // UpsertAccessList creates or updates an access list resource.
  rpc UpsertAccessList(UpsertAccessListRequest) returns (AccessList);
  // DeleteAccessList hard deletes the specified access list resource.
  rpc DeleteAccessList(DeleteAccessListRequest) returns (google.protobuf.Empty);
  // DeleteAllAccessLists hard deletes all access lists.
  rpc DeleteAllAccessLists(DeleteAllAccessListsRequest) returns (google.protobuf.Empty);
}

// GetAccessListsRequest is the request for getting all access lists.
message GetAccessListsRequest {}

// GetAccessListsResponse is the response for getting all access lists.
message GetAccessListsResponse {
  // access_lists is the list of access lists.
  repeated AccessList access_lists = 1;
}

// ListAccessListsRequest is the request for getting paginated access lists.
message ListAccessListsRequest {
  // page_size is the size of the page to request.
  int32 page_size = 1;

  // next_token is the page token.
  string next_token = 2;
}

// ListAccessListsResponse is the response for getting paginated access lists.
message ListAccessListsResponse {
  // access_lists is the list of access lists.
  repeated AccessList access_lists = 1;
  // next_token is the next page token.
  string next_token = 2;
}

// GetAccessListRequest is the request for retrieving an access list.
message GetAccessListRequest {
  // name is the name of the access list to retrieve.
  string name = 1;
}

// UpsertAccessListRequest is the request for upserting an access list.
message UpsertAccessListRequest {
  // access_list is the access list to upsert.
  AccessList access_list = 1;
}

// DeleteAccessListRequest is the request for deleting an access list.
message DeleteAccessListRequest {
  // name is the name of the access list to delete.
  string name = 1;
}

// DeleteAllAccessListRequest is the request for deleting all access lists.
message DeleteAllAccessListsRequest {}
